--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "keywords": [],
   "author": "Filipe Machado",
   "dependencies": {
+    "bull": "^3.10.0",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "guid": "0.0.12",
