Added stage database

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REDIS_HOST=redis
-DB_HOST=cheffybase.cgpn7ymfvcsn.us-east-1.rds.amazonaws.com
-DB_USER=cheffybase
-DB_PASS=hesoyam199
-DB_NAME=cheffybase
+DB_HOST=us-cdbr-iron-east-02.cleardb.net
+DB_USER=b226963bf3e5ef
+DB_PASS=2620c2d0
+DB_NAME=heroku_ce3424f4a1a7cdf
 DB_DIALECT=mysql
