--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 REDIS_HOST=redis
-DB_HOST=us-cdbr-iron-east-02.cleardb.net
-DB_USER=b226963bf3e5ef
-DB_PASS=2620c2d0
-DB_NAME=heroku_ce3424f4a1a7cdf
+DB_HOST=d13xat1hwxt21t45.cbetxkdyhwsb.us-east-1.rds.amazonaws.com
+DB_USER=u08sq4kg7nid94bc
+DB_PASS=wmel5vevii3me78j
+DB_NAME=v1ny3fmp7aqkbr2o
 DB_DIALECT=mysql
