--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "./bin/index.js",
   "scripts": {
-    "test": "jest",
+    "test": "mocha 'test/**/*.spec.js' --timeout 10000 ",
     "start": "node ./bin/server.js",
     "dev": "nodemon ./bin/server.js"
   },
@@ -35,9 +35,15 @@
     "twilio": "^3.33.2"
   },
   "devDependencies": {
-    "jest": "^24.8.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
+    "faker": "^4.1.0",
+    "mocha": "^6.2.0",
     "nodemon": "^1.18.9",
     "sequelize-cli": "^5.5.0",
+    "sequelize-test-helpers": "^1.1.2",
+    "sinon": "^7.4.2",
+    "sinon-chai": "^3.3.0",
     "supertest": "^4.0.2"
   }
 }
