Ignore .env file

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,13 @@
+#
+# DON'T DELETE THIS FILE
+#
+# This file is an example for you create your own .env file for development
+# propourses
+#
+# When you've already created your .env file based on this file
+# feel free to delete this entire comment :D
+#
+
 DB_HOST=
 DB_USER=
 DB_PASS=
