--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "keywords": [],
   "author": "Filipe Machado",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
     "bull": "^3.10.0",
     "cors": "^2.8.5",
