--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "watch": "NODE_ENV=test mocha 'test/**/*.js' --timeout 10000 -w",
     "start": "node ./bin/server.js",
     "dev": "NODE_ENV=development nodemon ./bin/server.js",
-    "migrate": "sequelize db:migrate"
+    "migrate": "sequelize-cli db:migrate"
   },
   "keywords": [
     "nodejs",
