--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "watch": "NODE_ENV=test mocha 'test/**/*.js' --timeout 10000 -w",
     "start": "node ./bin/server.js",
     "dev": "NODE_ENV=development nodemon ./bin/server.js",
-    "migrate": "sequelize db:migrate"
+    "migrate": "sequelize --migrations-path ./database/migrations db:migrate",
+    "seed": "sequelize --seeders-path ./database/seeders db:seed:all"
   },
   "keywords": [
     "nodejs",
@@ -24,13 +25,13 @@
     "cors": "^2.8.5",
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
-    "got": "^9.6.0",
     "guid": "0.0.12",
     "http-status-codes": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
-    "mysql2": "^1.7.0",
+    "mysql": "2.17.1",
+    "mysql2": "1.7.0",
     "nodemailer": "^6.3.0",
     "nodemailer-express-handlebars": "^3.1.0",
     "querystring": "^0.2.0",
@@ -49,7 +50,6 @@
     "chai-http": "^4.3.0",
     "faker": "^4.1.0",
     "mocha": "^6.2.0",
-    "nock": "^11.3.5",
     "nodemon": "^1.18.9",
     "sequelize-test-helpers": "^1.1.2",
     "sinon": "^7.4.2",
