--- a/.env.test
+++ b/.env.test
@@ -1,5 +1,7 @@
 DB_HOST=localhost
 DB_USER=root
-DB_PASS=i0o9dxwz
-DB_NAME=cheffy
+DB_PASS=3008
+DB_NAME=database_development
 DB_DIALECT=mysql
+CURRENT_API_URL=http://localhost:9000
+DRIVER_API_URL=http://localhost:3000
