Changes for functionalites of doc's update

--- a/.env.example
+++ b/.env.example
@@ -7,9 +7,11 @@
 # When you've already created your .env file based on this file
 # feel free to delete this entire comment :D
 #
-
 DB_HOST=
 DB_USER=
 DB_PASS=
 DB_NAME=
-DB_DIALECT=
+DB_DIALECT=mysql
+URL_SERVER=
+CURRENT_API_URL=
+DRIVER_API_URL=
