--- a/.env
+++ b/.env
@@ -3,5 +3,6 @@ DB_USER=n2ad1m9h9pnmrnhx
 DB_PASS=nuarueewww9a4b0n
 DB_NAME=c821iyxdz9lgx1ut
 DB_DIALECT=mysql
+URL_SERVER=https://mycheffy.herokuapp.com/
 CURRENT_API_URL=https://mycheffy.herokuapp.com/
 DRIVER_API_URL=https://cheffydriverapi.herokuapp.com/
