--- a/package.json
+++ b/package.json
@@ -57,6 +57,9 @@
   "devDependencies": {
     "chai": "^4.2.0",
     "chai-http": "^4.3.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.0.0",
+    "eslint-plugin-import": "^2.19.1",
     "faker": "^4.1.0",
     "mocha": "^6.2.0",
     "nodemon": "^1.18.9",
