--- a/package.json
+++ b/package.json
@@ -28,12 +28,15 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "fcm-push": "^1.1.3",
+    "google-distance-matrix": "^1.1.1",
     "guid": "0.0.12",
     "http-status-codes": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "md5": "^2.2.1",
     "moment": "^2.24.0",
+    "morgan": "^1.9.1",
     "multer": "^1.4.2",
     "mysql2": "^1.7.0",
     "nock": "^11.7.0",
