--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "dotenv": "^8.0.0",
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
+    "fcm-push": "^1.1.3",
+    "google-distance-matrix": "^1.1.1",
     "guid": "0.0.12",
     "http-status-codes": "^1.3.2",
     "jsonwebtoken": "^8.5.1",
