--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "body-parser": "^1.19.0",
     "bull": "^3.10.0",
     "bunyan": "^1.8.12",
+    "cloudinary": "^1.20.0",
     "cors": "^2.8.5",
     "debug": "^4.1.1",
     "dotenv": "^8.0.0",
@@ -38,6 +39,7 @@
     "moment": "^2.24.0",
     "morgan": "^1.9.1",
     "multer": "^1.4.2",
+    "multer-storage-cloudinary": "^2.2.1",
     "mysql2": "^1.7.0",
     "nock": "^11.7.0",
     "nodemailer": "^6.3.0",
