--- a/config/config.json
+++ b/config/config.json
@@ -2,7 +2,7 @@
 	"development": {
 		"username": "root",
 		"password": "admin",
-		"database": "database_development",
+		"database": "c821iyxdz9lgx1ut",
 		"host": "localhost",
 		"dialect": "mysql"
 	},
