--- a/config/config.json
+++ b/config/config.json
@@ -1,23 +1,23 @@
 {
-	"development": {
-		"username": "root",
-		"password": "admin",
-		"database": "c821iyxdz9lgx1ut",
-		"host": "localhost",
-		"dialect": "mysql"
-	},
-	"test": {
-		"username": "root",
-		"password": null,
-		"database": "database_test",
-		"host": "127.0.0.1",
-		"dialect": "mysql"
-	},
-	"production": {
-		"username": "n2ad1m9h9pnmrnhx",
-		"password": "ed7p75oo3nw0m7kc",
-		"database": "c821iyxdz9lgx1ut",
-		"host": "umabrisfx8afs3ja.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
-		"dialect": "mysql"
-	}
+  "development": {
+    "username": "phpmyadmin",
+    "password": "root",
+    "database": "database_development",
+    "host": "localhost",
+    "dialect": "mysql"
+  },
+  "test": {
+    "username": "root",
+    "password": null,
+    "database": "database_test",
+    "host": "127.0.0.1",
+    "dialect": "mysql"
+  },
+  "production": {
+    "username": "n2ad1m9h9pnmrnhx",
+    "password": "ed7p75oo3nw0m7kc",
+    "database": "c821iyxdz9lgx1ut",
+    "host": "umabrisfx8afs3ja.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
+    "dialect": "mysql"
+  }
 }
