--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "stripe": "^7.6.0",
     "swagger-ui-express": "^4.0.7",
     "twilio": "^3.33.2",
+    "underscore": "^1.10.2",
     "useragent": "^2.3.0"
   },
   "devDependencies": {
