--- a/config/config.json
+++ b/config/config.json
@@ -15,7 +15,7 @@
 	},
 	"production": {
 		"username": "n2ad1m9h9pnmrnhx",
-		"password": "tfmdz7w8adok6587",
+		"password": "ed7p75oo3nw0m7kc",
 		"database": "c821iyxdz9lgx1ut",
 		"host": "umabrisfx8afs3ja.cbetxkdyhwsb.us-east-1.rds.amazonaws.com",
 		"dialect": "mysql"
