--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "NODE_ENV=test mocha 'test/**/*.js' --timeout 10000",
     "watch": "NODE_ENV=test mocha 'test/**/*.js' --timeout 10000 -w",
     "start": "NODE_ENV=production node ./bin/server.js",
-    "dev": "NODE_ENV=development nodemon ./bin/server.js",
+    "dev": "nodemon ./bin/server.js",
     "migrate": "sequelize db:migrate"
   },
   "keywords": [
@@ -75,5 +75,8 @@
     "sinon-chai": "^3.3.0",
     "supertest": "^4.0.2",
     "yargs": "^15.0.2"
+  },
+  "engines": {
+    "node": "12.16.x"
   }
 }
