--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   ],
   "author": "Cheffy Team",
   "dependencies": {
+    "apple-signin": "^1.0.9",
     "axios": "^0.19.0",
     "bcrypt": "^3.0.6",
     "body-parser": "^1.19.0",
