--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "express": "^4.17.1",
     "express-async-handler": "^1.1.4",
     "fcm-push": "^1.1.3",
+    "geolib": "^3.2.1",
     "google-distance-matrix": "^1.1.1",
     "guid": "0.0.12",
     "http-status-codes": "^1.3.2",
@@ -56,6 +57,7 @@
     "sequelize": "^5.21.8",
     "sequelize-cli": "^5.5.1",
     "slack-node": "^0.1.8",
+    "socket.io": "^2.3.0",
     "sqlite3": "^4.0.9",
     "stripe": "^7.6.0",
     "swagger-ui-express": "^4.0.7",
