--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "sequelize": "^5.21.8",
     "sequelize-cli": "^5.5.1",
     "slack-node": "^0.1.8",
+    "socket.io": "^2.3.0",
     "sqlite3": "^4.0.9",
     "stripe": "^7.6.0",
     "swagger-ui-express": "^4.0.7",
