heroku rollback fix

--- a/package.json
+++ b/package.json
@@ -63,7 +63,8 @@
     "swagger-ui-express": "^4.0.7",
     "twilio": "^3.33.2",
     "underscore": "^1.10.2",
-    "useragent": "^2.3.0"
+    "useragent": "^2.3.0",
+    "yargs": "^15.0.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
@@ -79,8 +80,7 @@
     "sequelize-test-helpers": "^1.1.2",
     "sinon": "^7.4.2",
     "sinon-chai": "^3.3.0",
-    "supertest": "^4.0.2",
-    "yargs": "^15.0.2"
+    "supertest": "^4.0.2"
   },
   "bin": {
     "cheffyapi": "server.js"
