keys addded to list/userTracking

--- a/.env
+++ b/.env
@@ -6,3 +6,7 @@ DB_DIALECT=mysql
 URL_SERVER=https://mycheffy.herokuapp.com/
 CURRENT_API_URL=https://mycheffy.herokuapp.com/
 DRIVER_API_URL=https://cheffydriverapi.herokuapp.com/
+SENDGRID_HOST=smtp.sendgrid.net
+SENDGRID_PORT=25
+SENDGRID_USER=apikey
+SENDGRID_PASS=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
